manifests/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deyan-service-123
#  namespace: app-space
spec:
  selector:
    app: deyan-app-123
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: exporter
      protocol: TCP
      port: 9113
      targetPort: 9113
