manifests/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deyan-ingress-123
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target:
#  namespace: app-space
spec:
  ingressClassName: nginx
  rules:
  - host: application.deyan.itgix.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: deyan-service-123
            port:
              number: 80
